# protoc

./: CMakeLists.txt  README.md
include/: protobuf.h  protoc.h  protoc_out.h  protoc_parse.h  protoc_token.h
src/protoc/: io.c  main.c  out.c  parse.c  token.c
src/protocols/: example.proto  multimessage.proto
src/test/: file_serialize.c  simple_serialize.c
